syntax = "proto3";

option csharp_namespace = "PrimeServer";

package prime;

service PrimeService {
    rpc IsPrime (PrimeNumber) returns (PrimeResponse);
}

message PrimeNumber {
    int64 id = 1;
    int64 timestamp = 2;
    int64 number = 3;
}

message PrimeResponse {
    bool isPrime = 1;
}
